src/objects/Apttus_Config2__ConfigSettings__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__DisplayActionSettings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Action Settings</label>
        <length>64768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisplayColumnSettings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Column Settings</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldSetSettings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Set Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FlowSettings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flow Settings</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Flow__c</fullName>
        <label>Flow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>NGDefault</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LookupFieldSettings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lookup Field Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PageSettings__c</fullName>
        <description>Captures Catalog Page, Bundle Page and Assets Page settings</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Page Settings</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SystemProperties__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System Properties</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ConfigSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ViewSettings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>View Settings</label>
        <length>64768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Config Settings</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Config Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Config Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>